--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>About Me</h2>
             <p>I am a teacher who enjoys learning new skills. I have challenged myself by taking on learning a new skill
                 - coding. I hope to use this new skill by making a career change at the end of this school year. I hope
-                this new career path leads to new opportunities and hopefully a new career.</p>
+                this new career path leads to new opportunities and hopefully a new career as a life-long learner and coder. I hope to be able to continue learning new coding skills and languages along the way to be able to tackle any coding project that comes up.</p>
         </section>
 
         <section id="Projects" class="Projects">
@@ -53,13 +53,13 @@
             </div>
             <div class="card">
                 <h3 class="card-header">Group Project #1</h3>
-                    <a class="links" href="https://marissa-a-darr.github.io/outofthisworldjokes/"><img src="assets/images/ScreenShot.png"
+                    <a class="links" href="https://marissa-a-darr.github.io/outofthisworldjokes/"><img src="assets/images/DailyJoke.png"
                     alt="sample project"></a>
                     
             </div>
             <div class="card">
-                <h3 class="card-header">Sample Project 2</h3>
-                    <a class="links" href="https://images.pexels.com/photos/4164418/pexels-photo-4164418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"><img src="assets/images/coding.jpg"
+                <h3 class="card-header">Group Project #2</h3>
+                    <a class="links" href="https://paws-and-whiskers.herokuapp.com/"><img src="assets/images/PawsAndWhiskers.jpg"
                     alt="sample project"></a>
                     
             </div>
